[package]
name = "dilithium-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { version = "14.0.0", default-features = false }
codec = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false }
rusty-crystals-dilithium.workspace = true
verify = { path = "./verify", default-features = false } 
log = { workspace = true}

[features]
default = []
std = [
    "sp-core/std",
    "sp-runtime/std",
]
full_crypto = [ # pass through for "sign" in pair trait. 
    "sp-core/full_crypto",
]
