[package]
name = "external-miner"
version = "0.1.0"
edition = "2021"
authors = ["Resonance Network"]
description = "External miner service for Resonance Network"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.132", default-features = false }
hex = { version = "0.4.3", features = ["alloc"] }
primitive-types = { version = "0.13.1", default-features = false }
log = { version = "0.4.22", default-features = false }
env_logger = "0.10"
codec = { version = "3.6.12", default-features = false, package = "parity-scale-codec", features = ["derive", "std"] }
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
rand = { version = "0.8.5", default-features = false } 
qpow-math = { path = "../qpow-math", default-features = false }
resonance-miner-api = { path = "../resonance-miner-api" }
clap = { version = "4.5", features = ["derive", "env"] }

[dev-dependencies]
tokio-test = "0.4"
test-log = { version = "0.2", features = ["trace"] }
