[package]
name = "poseidon-resonance"
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
log = { workspace = true }
scale-info = { workspace = true }
sp-runtime = { workspace = true }
sp-core = { workspace = true}
sp-storage = { workspace = true }
dusk-poseidon = { workspace = true }
dusk-bls12_381 = { workspace = true }
sp-trie = { workspace = true }
codec = { workspace = true }
serde = { version = "1.0.217", default-features = false, optional = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "serde/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-storage/std",
    "scale-info/std",
]

serde = [
    "dep:serde",
    "sp-runtime/serde",
    "sp-core/serde",
    "sp-storage/serde",
    "codec/serde",
    "scale-info/serde"
]