[package]
name = "qpow-math"
version = "0.1.0"
edition = "2021"

[dependencies]
primitive-types = { version = "0.13.1", default-features = false }
num-bigint = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }
sha2 = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }

[features]
default = ["std"]
std = [
	"primitive-types/std",
    "sha2/std",
    "sha3/std",
]
