[package]
name = "qpow"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Quantum Proof of Work implementation"
license = "Apache-2.0"
publish = false

[dependencies]
codec.workspace = true
scale-info.workspace = true
sc-consensus-pow.workspace = true
sp-consensus-pow.workspace = true
sp-core.workspace = true
sp-runtime.workspace = true
sp-api.workspace = true

primitive-types.workspace = true
sha2 = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }
num-bigint = { version = "0.4.6", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
log.workspace = true

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "primitive-types/std",
    "sha2/std",
    "sha3/std",
]