[package]
name = "resonance-miner-api"
version = "0.1.0"
description = "API definitions for communication between Resonance node and external miners"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = true # Make available for third-party miners

[dependencies]
serde = { version = "1.0", features = ["derive"] }
