[package]
name = "tx-sdk"
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
hex = "0.4.3"
jsonrpsee = { workspace = true, features = ["client"] }
sp-core = { workspace = true , features = ["std"]}
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }

[[bin]]
name = "tx-sdk"
path = "src/main.rs"

