[package]
name = "pallet-faucet"
description = "Resonance Faucet"
version = "0.1.0"
license = "Apache-2.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "wasm32-unknown-unknown"]


[dependencies]
codec = { workspace=true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
frame-support = {workspace = true,default-features = false}
frame-system = {workspace = true, default-features = false}
sp-runtime = {workspace = true,default-features = false}
sp-std = {workspace = true, default-features = false}
sp-core = { workspace = true, default-features = false }
sp-keyring = { workspace = true, default-features = false, optional = true }


log = {workspace = true, default-features = false}
pallet-balances = {workspace = true, default-features = false}
hex = {workspace = true, default-features = false}

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-balances/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-core/std",
    "sp-keyring/std",
    "log/std",
]
runtime-benchmarks = []
try-runtime = []