[package]
name = "pallet-mining-rewards"
description = "Minig rewards pallet responsible for miner's identification and rewards"
version = "0.1.0"
license = "Apache-2.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "wasm32-unknown-unknown"]

[dependencies]
codec = { workspace=true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
frame-benchmarking = { optional = true, workspace = true, default-features = false }
frame-support = {workspace = true,default-features = false}
frame-system = {workspace = true, default-features = false}
sp-consensus-pow = {workspace = true,default-features = false}
sp-runtime = {workspace = true,default-features = false}
sp-std = {workspace = true, default-features = false}

log = {workspace = true, default-features = false}
pallet-balances = {workspace = true, default-features = false}

[dev-dependencies]
sp-io = {workspace = true, default-features = false}
sp-core = {workspace = true, default-features = false}

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-consensus-pow/std",
	"pallet-balances/std",
	"sp-runtime/std",
	"sp-std/std",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
]