[package]
name = "pallet-qpow"
description = "Resonance POW template"
version = "0.1.0"
license = "Apache-2.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "wasm32-unknown-unknown"]

#package = "parity-scale-codec",
[dependencies]
codec = { workspace=true, default-features = false, features = ["derive"] }
scale-info = { workspace=true, default-features = false, features = ["derive"] }
frame-benchmarking = { optional = true, default-features = false, workspace = true }
frame-support = { default-features = false, workspace = true }
frame-system = { default-features = false, workspace = true }
sp-runtime = { workspace=true, default-features = false }
sp-core = { workspace=true, default-features = false }
sp-io = { workspace=true, default-features = false }
sp-std = {workspace = true, default-features = false}
qpow-math = { path = "../../qpow-math", default-features = false }

pallet-timestamp = {workspace = true, default-features = false}

num-traits = { version = "0.2", default-features = false, features = ["libm"]}
log = { version = "0.4.22", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
]
