[package]
name = "sp-faucet"
version = "0.1.0"
license = "Apache-2.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[dependencies]
sp-api = { default-features = false, workspace = true}
codec = { default-features = false, workspace = true }


[features]
default = ["std"]
std = [
    "sp-api/std",
    "codec/std",
]